Fix cropper widget preview black background

--- a/Cropper/src/style/_app.scss
+++ b/Cropper/src/style/_app.scss
@@ -1,6 +1,7 @@
 .jcrop-mx-widget {
     .jcrop-holder[style] {
         z-index: 81 !important;
+        background-color: transparent;
     }
 
     .jcrop-tracker[style] {
